--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: terraform # Ensures Terraform commands run inside "terraform/" directory
+        working-directory: terraform 
 
     steps:
       - name: Checkout Repository
@@ -30,14 +30,14 @@ jobs:
           aws-region: us-east-1
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build and Push Docker Image
         run: |
           cd ..
-          docker build -t talibk/medusa-backend .
-          docker tag talibk/medusa-backend:latest talibk/medusa-backend:latest
-          docker push talibk/medusa-backend:latest
+          docker build -t mani628/medusa-backend .
+          docker tag mani628/medusa-backend:latest mani628/medusa-backend:latest
+          docker push mani628/medusa-backend:latest
 
       - name: Initialize Terraform
         run: terraform init
